tests/fixtures/invalid/bytes_bitxor_bool.py
# Cannot bitwise XOR Bytes and Bool
x: bytes = b"hello" ^ True
